<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.apps.asritha.fivecards.MainActivity"
    android:background="@color/background">

    <ImageButton
        android:id="@+id/button1"
        android:layout_width="112.5dp"
        android:layout_height="165dp"
        android:padding="5dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:onClick="ChooseToDiscard"
        android:layout_below="@+id/opencard"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/cd_player_card" />

    <ImageButton
        android:id="@+id/button2"
        android:layout_width="112.5dp"
        android:layout_height="165dp"
        android:padding="5dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:onClick="ChooseToDiscard"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/button1"
        android:contentDescription="@string/cd_player_card" />

    <ImageButton
        android:id="@+id/button3"
        android:layout_width="112.5dp"
        android:layout_height="165dp"
        android:padding="5dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_alignTop="@+id/button2"
        android:layout_centerHorizontal="true"
        android:onClick="ChooseToDiscard"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:contentDescription="@string/cd_player_card" />

    <ImageButton
        android:id="@+id/button4"
        android:layout_width="112.5dp"
        android:layout_height="165dp"
        android:padding="5dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_alignTop="@+id/button3"
        android:onClick="ChooseToDiscard"
        android:layout_alignParentStart="true"
        android:layout_marginStart="120dp"
        android:contentDescription="@string/cd_player_card" />

    <ImageButton
        android:id="@+id/button5"
        android:layout_width="112.5dp"
        android:layout_height="165dp"
        android:padding="5dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_alignTop="@+id/button4"
        android:onClick="ChooseToDiscard"
        android:layout_alignParentStart="true"
        android:layout_marginStart="160dp"
        android:contentDescription="@string/cd_player_card" />

    <ImageButton
        android:id="@+id/button6"
        android:layout_width="112.5dp"
        android:layout_height="165dp"
        android:padding="5dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_alignTop="@+id/button5"
        android:onClick="ChooseToDiscard"
        android:layout_alignParentStart="true"
        android:layout_marginStart="200dp"
        android:contentDescription="@string/cd_player_card" />

    <ImageButton
        android:id="@+id/opencard"
        android:layout_width="112.5dp"
        android:layout_height="165dp"
        android:padding="4dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_above="@+id/button4"
        android:layout_toEndOf="@+id/Joker"
        android:onClick="chooseOpenCard"
        android:contentDescription="@string/cd_open_card" />

    <ImageButton
        android:id="@+id/Joker"
        android:layout_width="112.5dp"
        android:layout_height="165dp"
        android:padding="4dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/button1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="56.25dp"
        android:contentDescription="@string/cd_joker_card" />

    <ImageButton
        android:id="@+id/deck"
        android:layout_width="112.5dp"
        android:layout_height="165dp"
        android:padding="4dp"
        android:src="@drawable/back"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_alignTop="@id/Joker"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:onClick="draw"
        android:contentDescription="@string/cd_deck" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start"
        android:onClick="start"
        android:layout_above="@+id/declare"
        android:layout_alignStart="@+id/declare"
        android:layout_alignEnd="@+id/declare" />

    <Button
        android:id="@+id/discard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_discard"
        android:onClick="discard"
        android:layout_alignBottom="@+id/opencard"
        android:layout_alignStart="@+id/c1"
        android:layout_alignEnd="@+id/c1" />

    <Button
        android:id="@+id/declare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_declare"
        android:onClick="declare"
        android:layout_above="@+id/discard"
        android:layout_alignStart="@+id/discard"
        android:layout_alignEnd="@+id/discard" />

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_alignTop="@+id/start"
        android:layout_alignStart="@+id/c5"
        android:layout_alignEnd="@+id/c5"
        tools:text="@string/msg_press_start" />

    <ImageButton
        android:id="@+id/c1"
        android:layout_width="112.5dp"
        android:layout_height="165dp"
        android:src="@drawable/back"
        android:padding="4dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_below="@+id/Joker"
        android:layout_alignTop="@id/button1"
        android:layout_alignBottom="@id/button1"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/cd_opponent_card" />

    <ImageButton
        android:id="@+id/c2"
        android:layout_width="112.5dp"
        android:layout_height="165dp"
        android:src="@drawable/back"
        android:padding="4dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_alignTop="@id/button1"
        android:layout_alignBottom="@id/button1"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="32dp"
        android:layout_toStartOf="@id/c1"
        android:contentDescription="@string/cd_opponent_card" />

    <ImageButton
        android:id="@+id/c3"
        android:layout_width="112.5dp"
        android:layout_height="165dp"
        android:src="@drawable/back"
        android:padding="4dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_alignTop="@id/button1"
        android:layout_alignBottom="@id/button1"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="64dp"
        android:layout_toStartOf="@id/c2"
        android:contentDescription="@string/cd_opponent_card" />

    <ImageButton
        android:id="@+id/c4"
        android:layout_width="112.5dp"
        android:layout_height="165dp"
        android:src="@drawable/back"
        android:padding="4dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_alignTop="@id/button1"
        android:layout_alignBottom="@id/button1"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="96dp"
        android:layout_toStartOf="@id/c3"
        android:contentDescription="@string/cd_opponent_card" />

    <ImageButton
        android:id="@+id/c5"
        android:layout_width="112.5dp"
        android:layout_height="165dp"
        android:src="@drawable/back"
        android:padding="4dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_alignTop="@id/button1"
        android:layout_alignBottom="@id/button1"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="128dp"
        android:layout_toStartOf="@id/c4"
        android:contentDescription="@string/cd_opponent_card" />

</RelativeLayout>
